--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0+'
+    compile 'com.android.support:support-v4:21.0.3'
     compile files('libs/afreechart-0.0.4.jar')
 }
