--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.kenevans.android.blecardiacmonitor"
-    android:versionCode="6"
-    android:versionName="4.0" >
-
-    <uses-sdk
-        android:minSdkVersion="18"
-        android:targetSdkVersion="21" />
+    package="net.kenevans.android.blecardiacmonitor">
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
