--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.0'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "net.kenevans.android.blecardiacmonitor"
         minSdkVersion 18
-        targetSdkVersion 24
-        versionCode 6
-        versionName "4.0.0"
+        targetSdkVersion 27
+        versionCode 7
+        versionName '4.1.0'
     }
     buildTypes {
         release {
@@ -21,6 +21,6 @@ android {
 }
 
 dependencies {
-    compile files('libs/afreechart-0.0.4.jar')
-    compile 'com.android.support:support-v4:26.0.0-alpha1'
+    implementation files('libs/afreechart-0.0.4.jar')
+    implementation 'com.android.support:support-v4:27.1.1'
 }
