--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "net.kenevans.android.blecardiacmonitor"
         minSdkVersion 18
         targetSdkVersion 27
-        versionCode 8
-        versionName '4.2.0'
+        versionCode 9
+        versionName '4.3.0'
     }
     buildTypes {
         release {
@@ -30,4 +29,5 @@ android {
 dependencies {
     implementation files('libs/afreechart-0.0.4.jar')
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
 }
