--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="net.kenevans.android.blecardiacmonitor.DeviceMonitorActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,25 +29,21 @@
         <activity
             android:name="net.kenevans.android.blecardiacmonitor.DeviceScanActivity"
             android:label="@string/title_activity_device_scan"
-            android:parentActivityName="net.kenevans.android.blecardiacmonitor.DeviceMonitorActivity"
-            android:theme="@android:style/Theme.Holo" >
+            android:parentActivityName="net.kenevans.android.blecardiacmonitor.DeviceMonitorActivity" >
         </activity>
         <activity
             android:name="net.kenevans.android.blecardiacmonitor.PlotActivity"
             android:label="@string/title_activity_plot"
-            android:parentActivityName="net.kenevans.android.blecardiacmonitor.DeviceMonitorActivity"
-            android:theme="@android:style/Theme.Holo" >
+            android:parentActivityName="net.kenevans.android.blecardiacmonitor.DeviceMonitorActivity" >
         </activity>
         <activity
             android:name="net.kenevans.android.blecardiacmonitor.SessionManagerActivity"
             android:label="@string/title_activity_session_manager"
-            android:parentActivityName="net.kenevans.android.blecardiacmonitor.DeviceMonitorActivity"
-            android:theme="@android:style/Theme.Holo" >
+            android:parentActivityName="net.kenevans.android.blecardiacmonitor.DeviceMonitorActivity" >
         </activity>
         <activity
             android:name="net.kenevans.android.blecardiacmonitor.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@android:style/Theme.Holo" >
+            android:label="@string/title_activity_settings" >
         </activity>
         <activity android:name=".InfoActivity" android:label="@string/help_title">
         </activity>
