Changing to AndroidPlot. versionCode=10. VersionName=5.0.0.
Is running as a strip chart with fixed-size data array.
Doesn't handle full data array and consequently not sessions.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         </activity>
         <activity
             android:name="net.kenevans.android.blecardiacmonitor.PlotActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
             android:label="@string/title_activity_plot"
             android:parentActivityName="net.kenevans.android.blecardiacmonitor.DeviceMonitorActivity" >
         </activity>
