--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "net.kenevans.android.blecardiacmonitor"
         minSdkVersion 18
         targetSdkVersion 27
-        versionCode 9
-        versionName '4.3.0'
+        versionCode 10
+        versionName '5.0.0'
     }
     buildTypes {
         release {
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    implementation files('libs/afreechart-0.0.4.jar')
+    implementation "com.androidplot:androidplot-core:1.5.6"
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
 }
