--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 .idea
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 build/
 /captures
-.idea/markdown-navigator/
 projectFilesBackup/
+app/libs/
